WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281019
REGRESSION(
280437@main
): Null pointer dereference in `Editor::reappliedEditing`
https://bugs.webkit.org/show_bug.cgi?id=281019
Summary
REGRESSION(280437@main): Null pointer dereference in `Editor::reappliedEditing`
Charlie Wolfe
Reported
2024-10-07 17:09:10 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2024-10-07 17:09:12 PDT
<
rdar://problem/137178993
>
Charlie Wolfe
Comment 2
2024-10-07 17:09:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34809
EWS
Comment 3
2024-10-07 20:08:44 PDT
Committed
284805@main
(bde672c03bb4): <
https://commits.webkit.org/284805@main
> Reviewed commits have been landed. Closing PR #34809 and removing active labels.
EWS
Comment 4
2024-10-08 14:14:42 PDT
Committed
283286.229@safari-7620-branch
(1054df7aecfd): <
https://commits.webkit.org/283286.229@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1993 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug