REGRESSION(280437@main): Null pointer dereference in `Editor::reappliedEditing` https://bugs.webkit.org/show_bug.cgi?id=281019 rdar://137178993

Reviewed by Richard Robinson.

* LayoutTests/fast/editing/recursive-reapply-edit-command-crash-expected.txt: Added.
* LayoutTests/fast/editing/recursive-reapply-edit-command-crash.html: Added.
* Source/WebCore/editing/Editor.cpp:
(WebCore::Editor::reappliedEditing):

Canonical link: https://commits.webkit.org/284805@main